fixing phone overflow

--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,7 @@ body {
 }
 
 #wrapper {
-    overflow-x: hidden;
-    overflow-y: hidden;
+    overflow: hidden;
     position: fixed;
 }
 
